--- a/index.html
+++ b/index.html
@@ -4,15 +4,23 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
     <title>mind reader</title>
 </head>
 <body>
-    <div id="header"></div>
-    <button id = "btn"> </button>
-    <div id="bottomtext"></div>
-    <button id="rstbtn"></button>
-
-    
+    <div class="container">
+        <div class="row">
+            <div class="column">
+                <div class="card">
+                    <div id="header"></div>
+                    <button id = "btn"> </button>
+                    <div id="bottomtext"></div>
+                    <button id="rstbtn"></button>
+                </div>    
+            </div>
+        </div>
+    </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"></script>
     <script src = "main.js"></script>
 </body>
 </html>
