--- a/index.html
+++ b/index.html
@@ -5,17 +5,22 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
+    <link href="style.css" rel="stylesheet">
     <title>mind reader</title>
 </head>
 <body>
     <div class="container">
         <div class="row">
-            <div class="column">
+            <div class="col">
                 <div class="card">
-                    <div id="header"></div>
-                    <button id = "btn"> </button>
-                    <div id="bottomtext"></div>
-                    <button id="rstbtn"></button>
+                    <div class="card-body">
+                        <h3 id="header" class ="card-title"></h3>
+                        <button id="back" class="btn btn-primary"></button>
+                        <button id = "btn"class="btn btn-primary"></button>
+                        <button id ="reset" class="btn btn-secondary"></button>
+                        
+                        <div id="bottomtext"></div>
+                    </div>
                 </div>    
             </div>
         </div>
